src/sintactico/y.output
   0  $accept : programa $end

   1  programa : definiciones funcmain

   2  funcmain : RES_FUNC RES_MAIN PAR_AB PAR_CE LLA_AB cuerpofuncion LLA_CE

   3  definiciones : definiciones definicion
   4               |

   5  definicion : defvar
   6             | funcion

   7  defvaropc : defvaropc defvar
   8            |

   9  defvar : RES_VAR lvar tipo SIM_PC

  10  lvar : lvar SIM_CO IDENT
  11       | IDENT

  12  funcion : RES_FUNC IDENT PAR_AB parametrosopc PAR_CE tiposimple LLA_AB cuerpofuncion LLA_CE
  13          | RES_FUNC IDENT PAR_AB parametrosopc PAR_CE LLA_AB cuerpofuncion LLA_CE

  14  cuerpofuncion : defvaropc sentenciasopc

  15  parametrosopc : parametros
  16                |

  17  parametros : parametros SIM_CO parametro
  18             | parametro

  19  parametro : IDENT tiposimple

  20  tipo : tiposimple
  21       | COR_AB CTE_ENTERA COR_CE tipo
  22       | RES_STRUCT LLA_AB campos LLA_CE

  23  tiposimple : RES_INT
  24             | RES_F32
  25             | RES_CHAR

  26  campos : campos campo
  27         | campo

  28  campo : lvar tipo SIM_PC

  29  while : RES_WHILE PAR_AB expresion PAR_CE LLA_AB sentencias LLA_CE
  30        | RES_WHILE expresion LLA_AB sentencias LLA_CE

  31  if : RES_IF PAR_AB expresion PAR_CE LLA_AB sentencias LLA_CE else
  32     | RES_IF expresion LLA_AB sentencias LLA_CE else

  33  else : RES_ELSE LLA_AB sentencias LLA_CE
  34       | RES_ELSE PAR_AB PAR_CE LLA_AB sentencias LLA_CE
  35       |

  36  sentenciasopc : sentencias
  37                |

  38  sentencias : sentencias sentencia
  39             | sentencia

  40  sentencia : RES_WRITE PAR_AB expresiones PAR_CE SIM_PC
  41            | RES_READ PAR_AB expresiones PAR_CE SIM_PC
  42            | expresion SIM_IG expresion SIM_PC
  43            | RES_RET expresion SIM_PC
  44            | while
  45            | if
  46            | IDENT PAR_AB PAR_CE SIM_PC
  47            | IDENT PAR_AB expresiones PAR_CE SIM_PC
  48            | expresion SEN_AND expresion SIM_PC
  49            | expresion SEN_OR expresion SIM_PC

  50  expresiones : expresiones SIM_CO expresion
  51              | expresion

  52  expresion : expresion OP_MAS expresion
  53            | expresion OP_MENOS expresion
  54            | expresion OP_MUL expresion
  55            | expresion OP_DIV expresion
  56            | expresion OP_MOD expresion
  57            | expresion BOOL_AND expresion
  58            | expresion BOOL_OR expresion
  59            | BOOL_NOT expresion
  60            | expresion SIM_MA expresion
  61            | expresion SIM_ME expresion
  62            | expresion SIM_MAIG expresion
  63            | expresion SIM_MEIG expresion
  64            | expresion SIM_DIST expresion
  65            | expresion SIM_COMIG expresion
  66            | OP_MENOS expresion
  67            | PAR_AB expresion PAR_CE
  68            | IDENT
  69            | CTE_ENTERA
  70            | CTE_DECIMAL
  71            | CHAR
  72            | IDENT PAR_AB expresiones PAR_CE
  73            | IDENT PAR_AB PAR_CE
  74            | tipo PAR_AB expresion PAR_CE
  75            | expresion COR_AB expresion COR_CE
  76            | expresion SIM_PTO IDENT
  77            | expresion SEN_AND expresion
  78            | expresion SEN_OR expresion

state 0
	$accept : . programa $end  (0)
	definiciones : .  (4)

	.  reduce 4

	programa  goto 1
	definiciones  goto 2


state 1
	$accept : programa . $end  (0)

	$end  accept


state 2
	programa : definiciones . funcmain  (1)
	definiciones : definiciones . definicion  (3)

	RES_VAR  shift 3
	RES_FUNC  shift 4
	.  error

	funcmain  goto 5
	definicion  goto 6
	defvar  goto 7
	funcion  goto 8


state 3
	defvar : RES_VAR . lvar tipo SIM_PC  (9)

	IDENT  shift 9
	.  error

	lvar  goto 10


state 4
	funcmain : RES_FUNC . RES_MAIN PAR_AB PAR_CE LLA_AB cuerpofuncion LLA_CE  (2)
	funcion : RES_FUNC . IDENT PAR_AB parametrosopc PAR_CE tiposimple LLA_AB cuerpofuncion LLA_CE  (12)
	funcion : RES_FUNC . IDENT PAR_AB parametrosopc PAR_CE LLA_AB cuerpofuncion LLA_CE  (13)

	IDENT  shift 11
	RES_MAIN  shift 12
	.  error


state 5
	programa : definiciones funcmain .  (1)

	.  reduce 1


state 6
	definiciones : definiciones definicion .  (3)

	.  reduce 3


state 7
	definicion : defvar .  (5)

	.  reduce 5


state 8
	definicion : funcion .  (6)

	.  reduce 6


state 9
	lvar : IDENT .  (11)

	.  reduce 11


state 10
	defvar : RES_VAR lvar . tipo SIM_PC  (9)
	lvar : lvar . SIM_CO IDENT  (10)

	COR_AB  shift 13
	SIM_CO  shift 14
	RES_INT  shift 15
	RES_F32  shift 16
	RES_CHAR  shift 17
	RES_STRUCT  shift 18
	.  error

	tipo  goto 19
	tiposimple  goto 20


state 11
	funcion : RES_FUNC IDENT . PAR_AB parametrosopc PAR_CE tiposimple LLA_AB cuerpofuncion LLA_CE  (12)
	funcion : RES_FUNC IDENT . PAR_AB parametrosopc PAR_CE LLA_AB cuerpofuncion LLA_CE  (13)

	PAR_AB  shift 21
	.  error


state 12
	funcmain : RES_FUNC RES_MAIN . PAR_AB PAR_CE LLA_AB cuerpofuncion LLA_CE  (2)

	PAR_AB  shift 22
	.  error


state 13
	tipo : COR_AB . CTE_ENTERA COR_CE tipo  (21)

	CTE_ENTERA  shift 23
	.  error


state 14
	lvar : lvar SIM_CO . IDENT  (10)

	IDENT  shift 24
	.  error


state 15
	tiposimple : RES_INT .  (23)

	.  reduce 23


state 16
	tiposimple : RES_F32 .  (24)

	.  reduce 24


state 17
	tiposimple : RES_CHAR .  (25)

	.  reduce 25


state 18
	tipo : RES_STRUCT . LLA_AB campos LLA_CE  (22)

	LLA_AB  shift 25
	.  error


state 19
	defvar : RES_VAR lvar tipo . SIM_PC  (9)

	SIM_PC  shift 26
	.  error


state 20
	tipo : tiposimple .  (20)

	.  reduce 20


state 21
	funcion : RES_FUNC IDENT PAR_AB . parametrosopc PAR_CE tiposimple LLA_AB cuerpofuncion LLA_CE  (12)
	funcion : RES_FUNC IDENT PAR_AB . parametrosopc PAR_CE LLA_AB cuerpofuncion LLA_CE  (13)
	parametrosopc : .  (16)

	IDENT  shift 27
	PAR_CE  reduce 16

	parametrosopc  goto 28
	parametros  goto 29
	parametro  goto 30


state 22
	funcmain : RES_FUNC RES_MAIN PAR_AB . PAR_CE LLA_AB cuerpofuncion LLA_CE  (2)

	PAR_CE  shift 31
	.  error


state 23
	tipo : COR_AB CTE_ENTERA . COR_CE tipo  (21)

	COR_CE  shift 32
	.  error


state 24
	lvar : lvar SIM_CO IDENT .  (10)

	.  reduce 10


state 25
	tipo : RES_STRUCT LLA_AB . campos LLA_CE  (22)

	IDENT  shift 9
	.  error

	lvar  goto 33
	campos  goto 34
	campo  goto 35


state 26
	defvar : RES_VAR lvar tipo SIM_PC .  (9)

	.  reduce 9


state 27
	parametro : IDENT . tiposimple  (19)

	RES_INT  shift 15
	RES_F32  shift 16
	RES_CHAR  shift 17
	.  error

	tiposimple  goto 36


state 28
	funcion : RES_FUNC IDENT PAR_AB parametrosopc . PAR_CE tiposimple LLA_AB cuerpofuncion LLA_CE  (12)
	funcion : RES_FUNC IDENT PAR_AB parametrosopc . PAR_CE LLA_AB cuerpofuncion LLA_CE  (13)

	PAR_CE  shift 37
	.  error


state 29
	parametrosopc : parametros .  (15)
	parametros : parametros . SIM_CO parametro  (17)

	SIM_CO  shift 38
	PAR_CE  reduce 15


state 30
	parametros : parametro .  (18)

	.  reduce 18


state 31
	funcmain : RES_FUNC RES_MAIN PAR_AB PAR_CE . LLA_AB cuerpofuncion LLA_CE  (2)

	LLA_AB  shift 39
	.  error


state 32
	tipo : COR_AB CTE_ENTERA COR_CE . tipo  (21)

	COR_AB  shift 13
	RES_INT  shift 15
	RES_F32  shift 16
	RES_CHAR  shift 17
	RES_STRUCT  shift 18
	.  error

	tipo  goto 40
	tiposimple  goto 20


state 33
	lvar : lvar . SIM_CO IDENT  (10)
	campo : lvar . tipo SIM_PC  (28)

	COR_AB  shift 13
	SIM_CO  shift 14
	RES_INT  shift 15
	RES_F32  shift 16
	RES_CHAR  shift 17
	RES_STRUCT  shift 18
	.  error

	tipo  goto 41
	tiposimple  goto 20


state 34
	tipo : RES_STRUCT LLA_AB campos . LLA_CE  (22)
	campos : campos . campo  (26)

	LLA_CE  shift 42
	IDENT  shift 9
	.  error

	lvar  goto 33
	campo  goto 43


state 35
	campos : campo .  (27)

	.  reduce 27


state 36
	parametro : IDENT tiposimple .  (19)

	.  reduce 19


state 37
	funcion : RES_FUNC IDENT PAR_AB parametrosopc PAR_CE . tiposimple LLA_AB cuerpofuncion LLA_CE  (12)
	funcion : RES_FUNC IDENT PAR_AB parametrosopc PAR_CE . LLA_AB cuerpofuncion LLA_CE  (13)

	LLA_AB  shift 44
	RES_INT  shift 15
	RES_F32  shift 16
	RES_CHAR  shift 17
	.  error

	tiposimple  goto 45


state 38
	parametros : parametros SIM_CO . parametro  (17)

	IDENT  shift 27
	.  error

	parametro  goto 46


state 39
	funcmain : RES_FUNC RES_MAIN PAR_AB PAR_CE LLA_AB . cuerpofuncion LLA_CE  (2)
	defvaropc : .  (8)

	.  reduce 8

	cuerpofuncion  goto 47
	defvaropc  goto 48


state 40
	tipo : COR_AB CTE_ENTERA COR_CE tipo .  (21)

	.  reduce 21


state 41
	campo : lvar tipo . SIM_PC  (28)

	SIM_PC  shift 49
	.  error


state 42
	tipo : RES_STRUCT LLA_AB campos LLA_CE .  (22)

	.  reduce 22


state 43
	campos : campos campo .  (26)

	.  reduce 26


state 44
	funcion : RES_FUNC IDENT PAR_AB parametrosopc PAR_CE LLA_AB . cuerpofuncion LLA_CE  (13)
	defvaropc : .  (8)

	.  reduce 8

	cuerpofuncion  goto 50
	defvaropc  goto 48


state 45
	funcion : RES_FUNC IDENT PAR_AB parametrosopc PAR_CE tiposimple . LLA_AB cuerpofuncion LLA_CE  (12)

	LLA_AB  shift 51
	.  error


state 46
	parametros : parametros SIM_CO parametro .  (17)

	.  reduce 17


state 47
	funcmain : RES_FUNC RES_MAIN PAR_AB PAR_CE LLA_AB cuerpofuncion . LLA_CE  (2)

	LLA_CE  shift 52
	.  error


state 48
	defvaropc : defvaropc . defvar  (7)
	cuerpofuncion : defvaropc . sentenciasopc  (14)
	sentenciasopc : .  (37)

	CTE_ENTERA  shift 53
	CTE_DECIMAL  shift 54
	PAR_AB  shift 55
	COR_AB  shift 13
	CHAR  shift 56
	IDENT  shift 57
	OP_MENOS  shift 58
	BOOL_NOT  shift 59
	RES_READ  shift 60
	RES_WRITE  shift 61
	RES_WHILE  shift 62
	RES_IF  shift 63
	RES_INT  shift 15
	RES_F32  shift 16
	RES_CHAR  shift 17
	RES_VAR  shift 3
	RES_STRUCT  shift 18
	RES_RET  shift 64
	LLA_CE  reduce 37

	defvar  goto 65
	tipo  goto 66
	tiposimple  goto 20
	sentenciasopc  goto 67
	while  goto 68
	expresion  goto 69
	sentencias  goto 70
	if  goto 71
	sentencia  goto 72


state 49
	campo : lvar tipo SIM_PC .  (28)

	.  reduce 28


state 50
	funcion : RES_FUNC IDENT PAR_AB parametrosopc PAR_CE LLA_AB cuerpofuncion . LLA_CE  (13)

	LLA_CE  shift 73
	.  error


state 51
	funcion : RES_FUNC IDENT PAR_AB parametrosopc PAR_CE tiposimple LLA_AB . cuerpofuncion LLA_CE  (12)
	defvaropc : .  (8)

	.  reduce 8

	cuerpofuncion  goto 74
	defvaropc  goto 48


state 52
	funcmain : RES_FUNC RES_MAIN PAR_AB PAR_CE LLA_AB cuerpofuncion LLA_CE .  (2)

	.  reduce 2


state 53
	expresion : CTE_ENTERA .  (69)

	.  reduce 69


state 54
	expresion : CTE_DECIMAL .  (70)

	.  reduce 70


state 55
	expresion : PAR_AB . expresion PAR_CE  (67)

	CTE_ENTERA  shift 53
	CTE_DECIMAL  shift 54
	PAR_AB  shift 55
	COR_AB  shift 13
	CHAR  shift 56
	IDENT  shift 75
	OP_MENOS  shift 58
	BOOL_NOT  shift 59
	RES_INT  shift 15
	RES_F32  shift 16
	RES_CHAR  shift 17
	RES_STRUCT  shift 18
	.  error

	tipo  goto 66
	tiposimple  goto 20
	expresion  goto 76


state 56
	expresion : CHAR .  (71)

	.  reduce 71


state 57
	sentencia : IDENT . PAR_AB PAR_CE SIM_PC  (46)
	sentencia : IDENT . PAR_AB expresiones PAR_CE SIM_PC  (47)
	expresion : IDENT .  (68)
	expresion : IDENT . PAR_AB expresiones PAR_CE  (72)
	expresion : IDENT . PAR_AB PAR_CE  (73)

	PAR_AB  shift 77
	COR_AB  reduce 68
	OP_MAS  reduce 68
	OP_MENOS  reduce 68
	OP_MUL  reduce 68
	OP_DIV  reduce 68
	OP_MOD  reduce 68
	SIM_COMIG  reduce 68
	SIM_DIST  reduce 68
	SIM_MAIG  reduce 68
	SIM_MEIG  reduce 68
	SIM_IG  reduce 68
	SIM_MA  reduce 68
	SIM_ME  reduce 68
	BOOL_AND  reduce 68
	BOOL_OR  reduce 68
	SIM_PTO  reduce 68
	SEN_AND  reduce 68
	SEN_OR  reduce 68


state 58
	expresion : OP_MENOS . expresion  (66)

	CTE_ENTERA  shift 53
	CTE_DECIMAL  shift 54
	PAR_AB  shift 55
	COR_AB  shift 13
	CHAR  shift 56
	IDENT  shift 75
	OP_MENOS  shift 58
	BOOL_NOT  shift 59
	RES_INT  shift 15
	RES_F32  shift 16
	RES_CHAR  shift 17
	RES_STRUCT  shift 18
	.  error

	tipo  goto 66
	tiposimple  goto 20
	expresion  goto 78


state 59
	expresion : BOOL_NOT . expresion  (59)

	CTE_ENTERA  shift 53
	CTE_DECIMAL  shift 54
	PAR_AB  shift 55
	COR_AB  shift 13
	CHAR  shift 56
	IDENT  shift 75
	OP_MENOS  shift 58
	BOOL_NOT  shift 59
	RES_INT  shift 15
	RES_F32  shift 16
	RES_CHAR  shift 17
	RES_STRUCT  shift 18
	.  error

	tipo  goto 66
	tiposimple  goto 20
	expresion  goto 79


state 60
	sentencia : RES_READ . PAR_AB expresiones PAR_CE SIM_PC  (41)

	PAR_AB  shift 80
	.  error


state 61
	sentencia : RES_WRITE . PAR_AB expresiones PAR_CE SIM_PC  (40)

	PAR_AB  shift 81
	.  error


state 62
	while : RES_WHILE . PAR_AB expresion PAR_CE LLA_AB sentencias LLA_CE  (29)
	while : RES_WHILE . expresion LLA_AB sentencias LLA_CE  (30)

	CTE_ENTERA  shift 53
	CTE_DECIMAL  shift 54
	PAR_AB  shift 82
	COR_AB  shift 13
	CHAR  shift 56
	IDENT  shift 75
	OP_MENOS  shift 58
	BOOL_NOT  shift 59
	RES_INT  shift 15
	RES_F32  shift 16
	RES_CHAR  shift 17
	RES_STRUCT  shift 18
	.  error

	tipo  goto 66
	tiposimple  goto 20
	expresion  goto 83


state 63
	if : RES_IF . PAR_AB expresion PAR_CE LLA_AB sentencias LLA_CE else  (31)
	if : RES_IF . expresion LLA_AB sentencias LLA_CE else  (32)

	CTE_ENTERA  shift 53
	CTE_DECIMAL  shift 54
	PAR_AB  shift 84
	COR_AB  shift 13
	CHAR  shift 56
	IDENT  shift 75
	OP_MENOS  shift 58
	BOOL_NOT  shift 59
	RES_INT  shift 15
	RES_F32  shift 16
	RES_CHAR  shift 17
	RES_STRUCT  shift 18
	.  error

	tipo  goto 66
	tiposimple  goto 20
	expresion  goto 85


state 64
	sentencia : RES_RET . expresion SIM_PC  (43)

	CTE_ENTERA  shift 53
	CTE_DECIMAL  shift 54
	PAR_AB  shift 55
	COR_AB  shift 13
	CHAR  shift 56
	IDENT  shift 75
	OP_MENOS  shift 58
	BOOL_NOT  shift 59
	RES_INT  shift 15
	RES_F32  shift 16
	RES_CHAR  shift 17
	RES_STRUCT  shift 18
	.  error

	tipo  goto 66
	tiposimple  goto 20
	expresion  goto 86


state 65
	defvaropc : defvaropc defvar .  (7)

	.  reduce 7


state 66
	expresion : tipo . PAR_AB expresion PAR_CE  (74)

	PAR_AB  shift 87
	.  error


state 67
	cuerpofuncion : defvaropc sentenciasopc .  (14)

	.  reduce 14


state 68
	sentencia : while .  (44)

	.  reduce 44


state 69
	sentencia : expresion . SIM_IG expresion SIM_PC  (42)
	sentencia : expresion . SEN_AND expresion SIM_PC  (48)
	sentencia : expresion . SEN_OR expresion SIM_PC  (49)
	expresion : expresion . OP_MAS expresion  (52)
	expresion : expresion . OP_MENOS expresion  (53)
	expresion : expresion . OP_MUL expresion  (54)
	expresion : expresion . OP_DIV expresion  (55)
	expresion : expresion . OP_MOD expresion  (56)
	expresion : expresion . BOOL_AND expresion  (57)
	expresion : expresion . BOOL_OR expresion  (58)
	expresion : expresion . SIM_MA expresion  (60)
	expresion : expresion . SIM_ME expresion  (61)
	expresion : expresion . SIM_MAIG expresion  (62)
	expresion : expresion . SIM_MEIG expresion  (63)
	expresion : expresion . SIM_DIST expresion  (64)
	expresion : expresion . SIM_COMIG expresion  (65)
	expresion : expresion . COR_AB expresion COR_CE  (75)
	expresion : expresion . SIM_PTO IDENT  (76)
	expresion : expresion . SEN_AND expresion  (77)
	expresion : expresion . SEN_OR expresion  (78)

	COR_AB  shift 88
	OP_MAS  shift 89
	OP_MENOS  shift 90
	OP_MUL  shift 91
	OP_DIV  shift 92
	OP_MOD  shift 93
	SIM_COMIG  shift 94
	SIM_DIST  shift 95
	SIM_MAIG  shift 96
	SIM_MEIG  shift 97
	SIM_IG  shift 98
	SIM_MA  shift 99
	SIM_ME  shift 100
	BOOL_AND  shift 101
	BOOL_OR  shift 102
	SIM_PTO  shift 103
	SEN_AND  shift 104
	SEN_OR  shift 105
	.  error


state 70
	sentenciasopc : sentencias .  (36)
	sentencias : sentencias . sentencia  (38)

	CTE_ENTERA  shift 53
	CTE_DECIMAL  shift 54
	PAR_AB  shift 55
	COR_AB  shift 13
	CHAR  shift 56
	IDENT  shift 57
	OP_MENOS  shift 58
	BOOL_NOT  shift 59
	RES_READ  shift 60
	RES_WRITE  shift 61
	RES_WHILE  shift 62
	RES_IF  shift 63
	RES_INT  shift 15
	RES_F32  shift 16
	RES_CHAR  shift 17
	RES_STRUCT  shift 18
	RES_RET  shift 64
	LLA_CE  reduce 36

	tipo  goto 66
	tiposimple  goto 20
	while  goto 68
	expresion  goto 69
	if  goto 71
	sentencia  goto 106


state 71
	sentencia : if .  (45)

	.  reduce 45


state 72
	sentencias : sentencia .  (39)

	.  reduce 39


state 73
	funcion : RES_FUNC IDENT PAR_AB parametrosopc PAR_CE LLA_AB cuerpofuncion LLA_CE .  (13)

	.  reduce 13


state 74
	funcion : RES_FUNC IDENT PAR_AB parametrosopc PAR_CE tiposimple LLA_AB cuerpofuncion . LLA_CE  (12)

	LLA_CE  shift 107
	.  error


state 75
	expresion : IDENT .  (68)
	expresion : IDENT . PAR_AB expresiones PAR_CE  (72)
	expresion : IDENT . PAR_AB PAR_CE  (73)

	PAR_AB  shift 108
	LLA_AB  reduce 68
	PAR_CE  reduce 68
	COR_AB  reduce 68
	COR_CE  reduce 68
	OP_MAS  reduce 68
	OP_MENOS  reduce 68
	OP_MUL  reduce 68
	OP_DIV  reduce 68
	OP_MOD  reduce 68
	SIM_COMIG  reduce 68
	SIM_DIST  reduce 68
	SIM_MAIG  reduce 68
	SIM_MEIG  reduce 68
	SIM_IG  reduce 68
	SIM_CO  reduce 68
	SIM_MA  reduce 68
	SIM_PC  reduce 68
	SIM_ME  reduce 68
	BOOL_AND  reduce 68
	BOOL_OR  reduce 68
	SIM_PTO  reduce 68
	SEN_AND  reduce 68
	SEN_OR  reduce 68


state 76
	expresion : expresion . OP_MAS expresion  (52)
	expresion : expresion . OP_MENOS expresion  (53)
	expresion : expresion . OP_MUL expresion  (54)
	expresion : expresion . OP_DIV expresion  (55)
	expresion : expresion . OP_MOD expresion  (56)
	expresion : expresion . BOOL_AND expresion  (57)
	expresion : expresion . BOOL_OR expresion  (58)
	expresion : expresion . SIM_MA expresion  (60)
	expresion : expresion . SIM_ME expresion  (61)
	expresion : expresion . SIM_MAIG expresion  (62)
	expresion : expresion . SIM_MEIG expresion  (63)
	expresion : expresion . SIM_DIST expresion  (64)
	expresion : expresion . SIM_COMIG expresion  (65)
	expresion : PAR_AB expresion . PAR_CE  (67)
	expresion : expresion . COR_AB expresion COR_CE  (75)
	expresion : expresion . SIM_PTO IDENT  (76)
	expresion : expresion . SEN_AND expresion  (77)
	expresion : expresion . SEN_OR expresion  (78)

	PAR_CE  shift 109
	COR_AB  shift 88
	OP_MAS  shift 89
	OP_MENOS  shift 90
	OP_MUL  shift 91
	OP_DIV  shift 92
	OP_MOD  shift 93
	SIM_COMIG  shift 94
	SIM_DIST  shift 95
	SIM_MAIG  shift 96
	SIM_MEIG  shift 97
	SIM_MA  shift 99
	SIM_ME  shift 100
	BOOL_AND  shift 101
	BOOL_OR  shift 102
	SIM_PTO  shift 103
	SEN_AND  shift 110
	SEN_OR  shift 111
	.  error


state 77
	sentencia : IDENT PAR_AB . PAR_CE SIM_PC  (46)
	sentencia : IDENT PAR_AB . expresiones PAR_CE SIM_PC  (47)
	expresion : IDENT PAR_AB . expresiones PAR_CE  (72)
	expresion : IDENT PAR_AB . PAR_CE  (73)

	CTE_ENTERA  shift 53
	CTE_DECIMAL  shift 54
	PAR_AB  shift 55
	PAR_CE  shift 112
	COR_AB  shift 13
	CHAR  shift 56
	IDENT  shift 75
	OP_MENOS  shift 58
	BOOL_NOT  shift 59
	RES_INT  shift 15
	RES_F32  shift 16
	RES_CHAR  shift 17
	RES_STRUCT  shift 18
	.  error

	tipo  goto 66
	tiposimple  goto 20
	expresion  goto 113
	expresiones  goto 114


state 78
	expresion : expresion . OP_MAS expresion  (52)
	expresion : expresion . OP_MENOS expresion  (53)
	expresion : expresion . OP_MUL expresion  (54)
	expresion : expresion . OP_DIV expresion  (55)
	expresion : expresion . OP_MOD expresion  (56)
	expresion : expresion . BOOL_AND expresion  (57)
	expresion : expresion . BOOL_OR expresion  (58)
	expresion : expresion . SIM_MA expresion  (60)
	expresion : expresion . SIM_ME expresion  (61)
	expresion : expresion . SIM_MAIG expresion  (62)
	expresion : expresion . SIM_MEIG expresion  (63)
	expresion : expresion . SIM_DIST expresion  (64)
	expresion : expresion . SIM_COMIG expresion  (65)
	expresion : OP_MENOS expresion .  (66)
	expresion : expresion . COR_AB expresion COR_CE  (75)
	expresion : expresion . SIM_PTO IDENT  (76)
	expresion : expresion . SEN_AND expresion  (77)
	expresion : expresion . SEN_OR expresion  (78)

	COR_AB  shift 88
	SIM_PTO  shift 103
	LLA_AB  reduce 66
	PAR_CE  reduce 66
	COR_CE  reduce 66
	OP_MAS  reduce 66
	OP_MENOS  reduce 66
	OP_MUL  reduce 66
	OP_DIV  reduce 66
	OP_MOD  reduce 66
	SIM_COMIG  reduce 66
	SIM_DIST  reduce 66
	SIM_MAIG  reduce 66
	SIM_MEIG  reduce 66
	SIM_IG  reduce 66
	SIM_CO  reduce 66
	SIM_MA  reduce 66
	SIM_PC  reduce 66
	SIM_ME  reduce 66
	BOOL_AND  reduce 66
	BOOL_OR  reduce 66
	SEN_AND  reduce 66
	SEN_OR  reduce 66


state 79
	expresion : expresion . OP_MAS expresion  (52)
	expresion : expresion . OP_MENOS expresion  (53)
	expresion : expresion . OP_MUL expresion  (54)
	expresion : expresion . OP_DIV expresion  (55)
	expresion : expresion . OP_MOD expresion  (56)
	expresion : expresion . BOOL_AND expresion  (57)
	expresion : expresion . BOOL_OR expresion  (58)
	expresion : BOOL_NOT expresion .  (59)
	expresion : expresion . SIM_MA expresion  (60)
	expresion : expresion . SIM_ME expresion  (61)
	expresion : expresion . SIM_MAIG expresion  (62)
	expresion : expresion . SIM_MEIG expresion  (63)
	expresion : expresion . SIM_DIST expresion  (64)
	expresion : expresion . SIM_COMIG expresion  (65)
	expresion : expresion . COR_AB expresion COR_CE  (75)
	expresion : expresion . SIM_PTO IDENT  (76)
	expresion : expresion . SEN_AND expresion  (77)
	expresion : expresion . SEN_OR expresion  (78)

	COR_AB  shift 88
	SIM_PTO  shift 103
	LLA_AB  reduce 59
	PAR_CE  reduce 59
	COR_CE  reduce 59
	OP_MAS  reduce 59
	OP_MENOS  reduce 59
	OP_MUL  reduce 59
	OP_DIV  reduce 59
	OP_MOD  reduce 59
	SIM_COMIG  reduce 59
	SIM_DIST  reduce 59
	SIM_MAIG  reduce 59
	SIM_MEIG  reduce 59
	SIM_IG  reduce 59
	SIM_CO  reduce 59
	SIM_MA  reduce 59
	SIM_PC  reduce 59
	SIM_ME  reduce 59
	BOOL_AND  reduce 59
	BOOL_OR  reduce 59
	SEN_AND  reduce 59
	SEN_OR  reduce 59


state 80
	sentencia : RES_READ PAR_AB . expresiones PAR_CE SIM_PC  (41)

	CTE_ENTERA  shift 53
	CTE_DECIMAL  shift 54
	PAR_AB  shift 55
	COR_AB  shift 13
	CHAR  shift 56
	IDENT  shift 75
	OP_MENOS  shift 58
	BOOL_NOT  shift 59
	RES_INT  shift 15
	RES_F32  shift 16
	RES_CHAR  shift 17
	RES_STRUCT  shift 18
	.  error

	tipo  goto 66
	tiposimple  goto 20
	expresion  goto 113
	expresiones  goto 115


state 81
	sentencia : RES_WRITE PAR_AB . expresiones PAR_CE SIM_PC  (40)

	CTE_ENTERA  shift 53
	CTE_DECIMAL  shift 54
	PAR_AB  shift 55
	COR_AB  shift 13
	CHAR  shift 56
	IDENT  shift 75
	OP_MENOS  shift 58
	BOOL_NOT  shift 59
	RES_INT  shift 15
	RES_F32  shift 16
	RES_CHAR  shift 17
	RES_STRUCT  shift 18
	.  error

	tipo  goto 66
	tiposimple  goto 20
	expresion  goto 113
	expresiones  goto 116


state 82
	while : RES_WHILE PAR_AB . expresion PAR_CE LLA_AB sentencias LLA_CE  (29)
	expresion : PAR_AB . expresion PAR_CE  (67)

	CTE_ENTERA  shift 53
	CTE_DECIMAL  shift 54
	PAR_AB  shift 55
	COR_AB  shift 13
	CHAR  shift 56
	IDENT  shift 75
	OP_MENOS  shift 58
	BOOL_NOT  shift 59
	RES_INT  shift 15
	RES_F32  shift 16
	RES_CHAR  shift 17
	RES_STRUCT  shift 18
	.  error

	tipo  goto 66
	tiposimple  goto 20
	expresion  goto 117


state 83
	while : RES_WHILE expresion . LLA_AB sentencias LLA_CE  (30)
	expresion : expresion . OP_MAS expresion  (52)
	expresion : expresion . OP_MENOS expresion  (53)
	expresion : expresion . OP_MUL expresion  (54)
	expresion : expresion . OP_DIV expresion  (55)
	expresion : expresion . OP_MOD expresion  (56)
	expresion : expresion . BOOL_AND expresion  (57)
	expresion : expresion . BOOL_OR expresion  (58)
	expresion : expresion . SIM_MA expresion  (60)
	expresion : expresion . SIM_ME expresion  (61)
	expresion : expresion . SIM_MAIG expresion  (62)
	expresion : expresion . SIM_MEIG expresion  (63)
	expresion : expresion . SIM_DIST expresion  (64)
	expresion : expresion . SIM_COMIG expresion  (65)
	expresion : expresion . COR_AB expresion COR_CE  (75)
	expresion : expresion . SIM_PTO IDENT  (76)
	expresion : expresion . SEN_AND expresion  (77)
	expresion : expresion . SEN_OR expresion  (78)

	LLA_AB  shift 118
	COR_AB  shift 88
	OP_MAS  shift 89
	OP_MENOS  shift 90
	OP_MUL  shift 91
	OP_DIV  shift 92
	OP_MOD  shift 93
	SIM_COMIG  shift 94
	SIM_DIST  shift 95
	SIM_MAIG  shift 96
	SIM_MEIG  shift 97
	SIM_MA  shift 99
	SIM_ME  shift 100
	BOOL_AND  shift 101
	BOOL_OR  shift 102
	SIM_PTO  shift 103
	SEN_AND  shift 110
	SEN_OR  shift 111
	.  error


state 84
	if : RES_IF PAR_AB . expresion PAR_CE LLA_AB sentencias LLA_CE else  (31)
	expresion : PAR_AB . expresion PAR_CE  (67)

	CTE_ENTERA  shift 53
	CTE_DECIMAL  shift 54
	PAR_AB  shift 55
	COR_AB  shift 13
	CHAR  shift 56
	IDENT  shift 75
	OP_MENOS  shift 58
	BOOL_NOT  shift 59
	RES_INT  shift 15
	RES_F32  shift 16
	RES_CHAR  shift 17
	RES_STRUCT  shift 18
	.  error

	tipo  goto 66
	tiposimple  goto 20
	expresion  goto 119


state 85
	if : RES_IF expresion . LLA_AB sentencias LLA_CE else  (32)
	expresion : expresion . OP_MAS expresion  (52)
	expresion : expresion . OP_MENOS expresion  (53)
	expresion : expresion . OP_MUL expresion  (54)
	expresion : expresion . OP_DIV expresion  (55)
	expresion : expresion . OP_MOD expresion  (56)
	expresion : expresion . BOOL_AND expresion  (57)
	expresion : expresion . BOOL_OR expresion  (58)
	expresion : expresion . SIM_MA expresion  (60)
	expresion : expresion . SIM_ME expresion  (61)
	expresion : expresion . SIM_MAIG expresion  (62)
	expresion : expresion . SIM_MEIG expresion  (63)
	expresion : expresion . SIM_DIST expresion  (64)
	expresion : expresion . SIM_COMIG expresion  (65)
	expresion : expresion . COR_AB expresion COR_CE  (75)
	expresion : expresion . SIM_PTO IDENT  (76)
	expresion : expresion . SEN_AND expresion  (77)
	expresion : expresion . SEN_OR expresion  (78)
